<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosImovel2">

    <TextView
        android:id="@+id/Tv_VagasImovel"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Tv_VagasImovel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Et_VagasImovel"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_VagasImovel" />

    <TextView
        android:id="@+id/Tv_AreaImovel"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Tv_AreaImovel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_VagasImovel" />

    <EditText
        android:id="@+id/Et_AreaImovel"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_AreaImovel" />

    <TextView
        android:id="@+id/Tv_PiscinaImovel"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Tv_PiscinaImovel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_AreaImovel" />

    <Spinner
        android:id="@+id/Sp_PiscinaImovel"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_PiscinaImovel" />

    <Button
        android:id="@+id/Bt_ProximoDadosImovel2"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:onClick="Proximo"
        android:text="@string/Bt_Proximo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sp_PiscinaImovel" />

</androidx.constraintlayout.widget.ConstraintLayout>